# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.513 2005/12/06 00:50:48 codeman Exp $

*GLI-0.3 (27 Oct 2005)

  5 Dec 2005; Preston Cody <codeman@gentoo.org>
  webgli: dhcp options in CC and post-install.
  updated comparison chart.

  4 Dec 2005; Preston Cody <codeman@gentoo.org>
  webgli_template.html: valign=top on left side.
  webgli: fix bootloader boot_device. now working.
  webgli: CC proxy done.  post-install proxy in progress.

  3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/webgli_template.html:
  increase padding for content cell to 7px and add colspan=2

  3 Dec 2005; Nicholas D. Wolfood <blackace@gentoo.org>
  webgli: added graphic bar on top
  webgli: added hover effects on the links on the left
  webgli: re-rendered header_bg.png to stretch without artifacts

  3 Dec 2005; Preston Cody <codeman@gentoo.org>
  webgli: make.conf disabling fixes for dynamic_stage3
  fixed portage snapshot browse popup
  all changes tested.
  webgli: add debug mode to CC screen. the screen still needs lots of work.
  
  1 Dec 2005; Preston Cody <codeman@gentoo.org>
  added debug mode question to gli-dialog
  added CC proxies to CC networking for gli-dialog
  webgli: fixed skip CC networking if connection active
  webgli: portage snapshot defaults to CD
  webgli: bootloader mbr drive selection
  webgli: USE flags unselectable if dynamic_stage3
  webgli: manual extra packages and save button.
    
  28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  change ping count to 2
  docs/comparison.html
  initial commit

  27 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  fix map() issue with grub code
  replace kernel_names and initrd_names loops with one-liners

  27 Nov 2005; Preston Cody <codeman@gentoo.org>
  gli-dialog won't let you dynamic stage3 without systempkgs.txt.