@@ -104,13 +104,13 @@
     <td>DistCC Support</td>
     <td class="good">Yes</td>
     <td class="bad">FIXME checkbox only</td>
-    <td class="bad">FIXME checkbox only</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>/etc/portage/* support</td>
     <td class="good">Yes</td>
     <td class="bad">FIXME NONE</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -152,7 +152,7 @@
     <td>Copy CC networking to IP</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">No</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Pre-configure network devices to DHCP</td>
