@@ -89,6 +89,7 @@
         <li><a href="/webgli/LocalUSE">Local USE Flags</a></li>
         <li><a href="/webgli/MakeDotConf">Make.conf</a></li>
         <li><a href="/webgli/ConfigFiles">Config Files</a></li>
+		<li><a href="/webgli/EtcPortage">etc/portage</a></li>
         <li><a href="/webgli/Kernel">Kernel</a></li>
         <li><a href="/webgli/Bootloader">Bootloader</a></li>
         <li><a href="/webgli/Timezone">Timezone</a></li>
